# Bittorrent-Client

./: .gitignore  Cargo.toml  README.md  bodhi.torrent  cambios_para_chequear  config ubuntu.txt  config.txt  config1.txt  config2.txt  config3.txt  config4.txt  config_chiken_leecher_1.txt  config_chiken_seeder.txt  config_eduardo_seeder.txt  config_generic.txt  config_logo_seeder.txt  dif_antes_  manjaro.torrent  multifile-puppy.torrent  run_peers.sh  run_seeders.sh  run_server_test  run_simulation.sh  run_tests  stop_simulation.sh
.github/workflows/: ci.yaml  rust.yml
downloads/: 0
example_torrents/: AlbumArtSmall.jpg (4).torrent  LuisFonsiDespacitoFt.DaddyYankee_201708_archive.torrent  debian copy.torrent  eduardo.mp4.torrent  gif.gif.torrent  logo512.png.torrent  mint.torrent  pollos.torrent  void.torrent
logs/: download_log.txt
server_client/src/: main.rs
src/: application.rs  application_constants.rs  application_errors.rs  constants.rs  lib.rs  main.rs
src/bencode/: bencode_decoder.rs  bencode_encoder.rs  bencode_types.rs  decoder.rs  encoder.rs  errors.rs  mod.rs  types.rs
src/client/: constants.rs  info.rs  mod.rs  torrent_client.rs  types.rs  utils.rs
src/config/: errors.rs  mod.rs  parser.rs  types.rs
src/download_manager/: disk_saving.rs  errors.rs  mod.rs  types.rs
src/http/: constants.rs  errors.rs  https_connection.rs  mod.rs  types.rs
src/logger/: constants.rs  custom_logger.rs  errors.rs  mod.rs  types.rs  utils.rs
tests/: integration_tests.rs  mock_service_creation.rs  test_config.txt
tracker/: Cargo.toml  README.md  metrics_dump
(+431 files in other folders)
