[package]
name = "bittorrent_rustico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.1"
native-tls = "0.2"
rand = "0.8.4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
gtk = "0.15.5"
once_cell = "1.12.0"